# PotMill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
autopiad/: __main__.py  entropy.py  fake_vasp.py  featurize.py  fit.py  lammps.py  monitor.py  pareto.py  plot_monitor.py  pops.py  tools.py  uma.py  unary.py  vasp.py
autopiad/binary_entropy/: WBe.mliap.descriptor  calculator.py  model.py  optimizer.py  renorm.py  renorm_PuSb.ipynb
autopiad/entropy/binary/: README.md  calculator.py  model.py  optimizer.py
autopiad/multi_element_entropy/: entropy_utils.py
autopiad/structuregen/: calculator.py  lammps_utils.py  model.py  optimizer.py  renorm.py
conda/: meta.yaml
examples/: run_debug.sh
examples/Be/: inputfile  run_vasp_6.3.2_std_ase.sh
examples/Be/ACE/: FitSNAP.in  inputfile  run_debug.sh  run_vasp_6.3.2_std_ase.sh
examples/Be/SNAP/: FitSNAP.in  inputfile  run_debug.sh
examples/HBeW/ACE/: CLAUDE.md  FitSNAP.in  config.ini  inputfile  run_perlmutter.sh
examples/WBe/CPU_Vasp/: CLAUDE.md  FitSNAP.in  config.ini  run_perlmutter_cpu.sh
examples/WRe/: FitSNAP.in  inputfile
examples/WRe/ACE/: CLAUDE.md  FitSNAP.in  config.ini  inputfile  run_debug.sh  run_perlmutter.sh  run_vasp_6.3.2_std_ase.sh
examples/WRe/SNAP/: FitSNAP.in  inputfile  run_debug.sh
potmill/: __init__.py  __main__.py  bfile.py  config.py  entropy.py  fake_vasp.py  featurize.py  fit.py  lammps.py  monitor.py  pareto.py  pipeline.py  plot_monitor.py  pops.py  resources.py  tools.py  uma.py  unary.py  vasp.py
potmill/analysis/: _recon.py  pareto.py  plot_errors.py  plot_monitor.py  plot_pareto.py
potmill/featurization/: featurize.py
potmill/fitting/: fit.py
potmill/labeling/: __init__.py  fake.py  lammps.py  uma.py  vasp.py
potmill/legacy/binary_entropy/: model.py  optimizer.py  renorm.py
potmill/legacy/multi_element_entropy/: calculator.py  d-opti-chem.py  entropy_utils.py  model.py
potmill/structuregen/: calculator.py  model.py  optimizer.py  renorm.py  samplers.py
tests/: test_config.py  test_descriptor_container.py  test_fit_equivalence.py  test_fits_container.py  test_labeling.py  test_resources.py
